tests/baselines/reference/jsdocReadonly.errors.txt
jsdocReadonly.js(23,3): error TS2540: Cannot assign to 'y' because it is a read-only property.


==== jsdocReadonly.js (1 errors) ====
    class LOL {
        /**
         * @readonly
         * @private
         * @type {number}
         * Order rules do not apply to JSDoc
         */
        x = 1
        /** @readonly */
        y = 2
        /** @readonly Definitely not here */
        static z = 3
        /** @readonly This is OK too */
        constructor() {
            /** ok */
            this.y = 2
            /** @readonly ok */
            this.ka = 2
        }
    }
    
    var l = new LOL()
    l.y = 12
      ~
!!! error TS2540: Cannot assign to 'y' because it is a read-only property.
    